feat : convert 로직 dto로 이동